--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <header>
         <div class="cabecalho-imagem">
-            <img src="./fotos/imagem_header 1.svg" alt="Imagem do cabeçalho">
+            <img src="./imagem_header 1.svg" alt="Imagem do cabeçalho">
         </div>
     </header>
 
@@ -40,7 +40,7 @@
                 <p class="conteudo-geral">Nascida e criada em Londres e passando parte de sua adolescência, mais especificamente dos 13 aos 15 anos, em Pristina, Kosovo, Lipa é evidenciada ao mundo em 2017 com o seu sucesso "New Rules".<br><br>Dua foi revelada em 2015 com o seu sucesso "Be The One", e consigo trouxe a dance music e o dark pop.</p>
             </div>
             <div class="imagem-sobre">
-                <img src="./fotos/sobre_image.png" alt="imagem do sobre">
+                <img src="./" alt="imagem do sobre">
             </div>
         </div>
     </section>
@@ -51,7 +51,7 @@
         <div class="conteudo-albuns">
             <div class="dua-lipa">
                 <div class="imagem-dualipa">
-                    <img src="./fotos/Dua_Lipa_-_Dua_Lipa 1.svg" alt="imagem do álbum dua lipa">
+                    <img src="./Dua_Lipa_-_Dua_Lipa 1.svg" alt="imagem do álbum dua lipa">
                 </div>
                 <div class="titulo-dua-lipa">
                     <p>dua lipa</p>
@@ -64,7 +64,7 @@
             </div>
             <div class="future-nostalgia">
                 <div class="imagem-future-nostalgia">
-                    <img src="./fotos/Dua_Lipa_-_Future_Nostalgia 1.svg" alt="imagem do álbum future nostalgia">
+                    <img src="./Dua_Lipa_-_Future_Nostalgia 1.svg" alt="imagem do álbum future nostalgia">
                 </div>
                 <div class="titulo-future-nostaliga">
                     <p>future<br> nostalgia</p>
@@ -77,7 +77,7 @@
             </div>
             <div class="houdini">
                 <div class="imagem-houdini">
-                    <img src="./fotos/Dua_Lipa_-_Houdini 1.svg" alt="imagem do single houdini">
+                    <img src="./Dua_Lipa_-_Houdini 1.svg" alt="imagem do single houdini">
                 </div>
                 <div class="titulo-houdini">
                     <p>houdini</p>
@@ -96,7 +96,7 @@
         </div>
         <div class="conteudo-grammys">
             <div class="imagem-grammys">
-                <img src="./fotos/dua_lipa_grammys.svg" alt="dua lipa segurando grammys">
+                <img src="./dua_lipa_grammys.svg" alt="dua lipa segurando grammys">
             </div>
             <div class="texto-grammys">
                 <p>
@@ -121,7 +121,7 @@
                 </p>
             </div>
             <div class="imagem-houini-final">
-                <img src="./fotos/dua_lipa_houdini_photoshoot.svg" alt="dua lipa no photoshoot de houdini">
+                <img src="./dua_lipa_houdini_photoshoot.svg" alt="dua lipa no photoshoot de houdini">
             </div>
         </div>
     </section>
