--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="conteudo-geral">Nascida e criada em Londres e passando parte de sua adolescência, mais especificamente dos 13 aos 15 anos, em Pristina, Kosovo, Lipa é evidenciada ao mundo em 2017 com o seu sucesso "New Rules".<br><br>Dua foi revelada em 2015 com o seu sucesso "Be The One", e consigo trouxe a dance music e o dark pop.</p>
             </div>
             <div class="imagem-sobre">
-                <img src="./sobre_image.png" alt="imagem do sobre">
+                <img src="./sobre_image.jpg" alt="imagem do sobre">
             </div>
         </div>
     </section>
